2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Add basic
	local variable support. Use the searchtable
	implementation that was just moved into
	libcommon.a to support variable lookups.
	Add support for the global keyword.
	Add FUNCTION condition support to variable
	read and write rules.
	* tests/parsers/php.test: Add a series of
	variable definition and xref tests. Check
	global variable, local variable, and the
	global keyword.
	* tests/parsers/testutil.tcl: Add new
	php_parse_local_xref helper method that
	passes the -l flag to phpbrowser.

2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (load_xref_pipe): Switch xref
	pipe back to blocking mode before closing
	so that stderr messages are not lost due to
	a nasty Tcl bug.

2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* db/Makefile.am: Remove ref to srchtbl.c.
	* db/Makefile.in: Regen.
	* db/srchtbl.c:
	* db/srchtbl.h: Moved to parsers/common
	so that each of the browsers have
	access to a hashtable implementation.
	* parsers/common/Makefile.am: Add srchtbl.c
	and srchtbl.h to libcommon_a_SOURCES.
	* parsers/common/Makefile.in: Regen.
	* parsers/common/srchtbl.c:
	* parsers/common/srchtbl.h: Moved from db.
	* parsers/cpp/cpplib/Makefile.am: Add
	parsers/common to list of include directories.
	* parsers/cpp/cpplib/Makefile.in: Regen.

2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/toolbox/snptools.c (sn_getopt,
	sn_process_options): Set the report_local_vars
	global variable defined in the libcommon.a
	when the -l option is passed to a SN parser.
	This allows xrefs to global variables to
	be written by a toolbox based parser.

2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/cpp/cbrowser2.c (main): Fix the -l
	option so that it does not require an
	argument. This fixes a problem when xref
	was not running when local vars is enabled.
